[package]
name = "route-snapper"
version = "0.1.0"
edition = "2024"
description = "A Rust library to accurately project an ordered list of stops onto a route line, intelligently handling cases where the route overlaps itself."
license = "MIT"
repository = "https://github.com/anscg/route-snapper"
readme = "README.md"
keywords = ["geo", "gis", "route", "snapping", "gps"]
categories = ["algorithms", "science::geo"]

[dependencies]
geo = { version = "0.26", features = ["proj"] }
geo-types = "0.7"